Added name and price to collection items

--- a/shop.html
+++ b/shop.html
@@ -766,8 +766,8 @@
             alt=""
             class="collection-img"
           />
-          <h3 class="collection-item-name"></h3>
-          <h3 class="collection-item-price"></h3>
+          <h3 class="collection-item-name">Nike Airforce 1 Mid</h3>
+          <h3 class="collection-item-price">£70</h3>
           <a href="" class="collection-view-btn">view</a>
         </div>
         <div class="collection-item">
@@ -776,8 +776,8 @@
             alt=""
             class="collection-img"
           />
-          <h3 class="collection-item-name"></h3>
-          <h3 class="collection-item-price"></h3>
+          <h3 class="collection-item-name">Nike Airforce 1 low</h3>
+          <h3 class="collection-item-price">£65</h3>
           <a href="" class="collection-view-btn">view</a>
         </div>
         <div class="collection-item">
@@ -786,8 +786,8 @@
             alt=""
             class="collection-img"
           />
-          <h3 class="collection-item-name"></h3>
-          <h3 class="collection-item-price"></h3>
+          <h3 class="collection-item-name">Adidas Tubular</h3>
+          <h3 class="collection-item-price">£50</h3>
           <a href="" class="collection-view-btn">view</a>
         </div>
         <div class="collection-item">
@@ -796,8 +796,8 @@
             alt=""
             class="collection-img"
           />
-          <h3 class="collection-item-name"></h3>
-          <h3 class="collection-item-price"></h3>
+          <h3 class="collection-item-name">Nike Airforce 1 flyknit</h3>
+          <h3 class="collection-item-price">£65</h3>
           <a href="" class="collection-view-btn">view</a>
         </div>
         <div class="collection-item">
@@ -806,8 +806,8 @@
             alt=""
             class="collection-img"
           />
-          <h3 class="collection-item-name"></h3>
-          <h3 class="collection-item-price"></h3>
+          <h3 class="collection-item-name">Nike Airforce 1 low</h3>
+          <h3 class="collection-item-price">£60</h3>
           <a href="" class="collection-view-btn">view</a>
         </div>
         <div class="collection-item">
@@ -816,8 +816,8 @@
             alt=""
             class="collection-img"
           />
-          <h3 class="collection-item-name"></h3>
-          <h3 class="collection-item-price"></h3>
+          <h3 class="collection-item-name">Nike Airmax 95</h3>
+          <h3 class="collection-item-price">£70</h3>
           <a href="" class="collection-view-btn">view</a>
         </div>
         <div class="collection-item">
@@ -826,8 +826,8 @@
             alt=""
             class="collection-img"
           />
-          <h3 class="collection-item-name"></h3>
-          <h3 class="collection-item-price"></h3>
+          <h3 class="collection-item-name">Nike Tiempo</h3>
+          <h3 class="collection-item-price">£50</h3>
           <a href="" class="collection-view-btn">view</a>
         </div>
         <div class="collection-item">
@@ -836,8 +836,8 @@
             alt=""
             class="collection-img"
           />
-          <h3 class="collection-item-name"></h3>
-          <h3 class="collection-item-price"></h3>
+          <h3 class="collection-item-name">Jordan retro 8</h3>
+          <h3 class="collection-item-price">£90</h3>
           <a href="" class="collection-view-btn">view</a>
         </div>
         <div class="collection-item">
@@ -846,8 +846,8 @@
             alt=""
             class="collection-img"
           />
-          <h3 class="collection-item-name"></h3>
-          <h3 class="collection-item-price"></h3>
+          <h3 class="collection-item-name">Nike Airforce 1 suede</h3>
+          <h3 class="collection-item-price">£60</h3>
           <a href="" class="collection-view-btn">view</a>
         </div>
         <div class="collection-item">
@@ -856,8 +856,8 @@
             alt=""
             class="collection-img"
           />
-          <h3 class="collection-item-name"></h3>
-          <h3 class="collection-item-price"></h3>
+          <h3 class="collection-item-name">Nike Airforce 1 low</h3>
+          <h3 class="collection-item-price">£55</h3>
           <a href="" class="collection-view-btn">view</a>
         </div>
         <div class="collection-item">
@@ -866,8 +866,8 @@
             alt=""
             class="collection-img"
           />
-          <h3 class="collection-item-name"></h3>
-          <h3 class="collection-item-price"></h3>
+          <h3 class="collection-item-name">Adidas Campo</h3>
+          <h3 class="collection-item-price">£40</h3>
           <a href="" class="collection-view-btn">view</a>
         </div>
         <div class="collection-item">
@@ -876,8 +876,8 @@
             alt=""
             class="collection-img"
           />
-          <h3 class="collection-item-name"></h3>
-          <h3 class="collection-item-price"></h3>
+          <h3 class="collection-item-name">Adidas classic</h3>
+          <h3 class="collection-item-price">£60</h3>
           <a href="" class="collection-view-btn">view</a>
         </div>
         <div class="collection-item">
@@ -886,8 +886,8 @@
             alt=""
             class="collection-img"
           />
-          <h3 class="collection-item-name"></h3>
-          <h3 class="collection-item-price"></h3>
+          <h3 class="collection-item-name">Nike Airmax 97</h3>
+          <h3 class="collection-item-price">£75</h3>
           <a href="" class="collection-view-btn">view</a>
         </div>
         <div class="collection-item">
@@ -896,8 +896,8 @@
             alt=""
             class="collection-img"
           />
-          <h3 class="collection-item-name"></h3>
-          <h3 class="collection-item-price"></h3>
+          <h3 class="collection-item-name">Jordan flight 32</h3>
+          <h3 class="collection-item-price">£65</h3>
           <a href="" class="collection-view-btn">view</a>
         </div>
         <div class="collection-item">
@@ -906,8 +906,8 @@
             alt=""
             class="collection-img"
           />
-          <h3 class="collection-item-name"></h3>
-          <h3 class="collection-item-price"></h3>
+          <h3 class="collection-item-name">Nike Tiempo</h3>
+          <h3 class="collection-item-price">£65</h3>
           <a href="" class="collection-view-btn">view</a>
         </div>
         <div class="collection-item">
@@ -916,8 +916,8 @@
             alt=""
             class="collection-img"
           />
-          <h3 class="collection-item-name"></h3>
-          <h3 class="collection-item-price"></h3>
+          <h3 class="collection-item-name">Jordan retro 1</h3>
+          <h3 class="collection-item-price">£85</h3>
           <a href="" class="collection-view-btn">view</a>
         </div>
         <div class="collection-item">
@@ -926,8 +926,8 @@
             alt=""
             class="collection-img"
           />
-          <h3 class="collection-item-name"></h3>
-          <h3 class="collection-item-price"></h3>
+          <h3 class="collection-item-name">Nike Airforce 1 low</h3>
+          <h3 class="collection-item-price">£45</h3>
           <a href="" class="collection-view-btn">view</a>
         </div>
         <div class="collection-item">
@@ -936,8 +936,8 @@
             alt=""
             class="collection-img"
           />
-          <h3 class="collection-item-name"></h3>
-          <h3 class="collection-item-price"></h3>
+          <h3 class="collection-item-name">Nike Runners</h3>
+          <h3 class="collection-item-price">£40</h3>
           <a href="" class="collection-view-btn">view</a>
         </div>
         <div class="collection-item">
@@ -946,8 +946,8 @@
             alt=""
             class="collection-img"
           />
-          <h3 class="collection-item-name"></h3>
-          <h3 class="collection-item-price"></h3>
+          <h3 class="collection-item-name">Jordan retro 4</h3>
+          <h3 class="collection-item-price">£95</h3>
           <a href="" class="collection-view-btn">view</a>
         </div>
         <div class="collection-item">
@@ -956,8 +956,8 @@
             alt=""
             class="collection-img"
           />
-          <h3 class="collection-item-name"></h3>
-          <h3 class="collection-item-price"></h3>
+          <h3 class="collection-item-name">Nike Wedge</h3>
+          <h3 class="collection-item-price">£45</h3>
           <a href="" class="collection-view-btn">view</a>
         </div>
         <div class="collection-item">
@@ -966,8 +966,8 @@
             alt=""
             class="collection-img"
           />
-          <h3 class="collection-item-name"></h3>
-          <h3 class="collection-item-price"></h3>
+          <h3 class="collection-item-name">Puma Classics suede</h3>
+          <h3 class="collection-item-price">£35</h3>
           <a href="" class="collection-view-btn">view</a>
         </div>
         <div class="collection-item">
@@ -976,8 +976,8 @@
             alt=""
             class="collection-img"
           />
-          <h3 class="collection-item-name"></h3>
-          <h3 class="collection-item-price"></h3>
+          <h3 class="collection-item-name">Nike Cortez</h3>
+          <h3 class="collection-item-price">£30</h3>
           <a href="" class="collection-view-btn">view</a>
         </div>
         <div class="collection-item">
@@ -986,8 +986,8 @@
             alt=""
             class="collection-img"
           />
-          <h3 class="collection-item-name"></h3>
-          <h3 class="collection-item-price"></h3>
+          <h3 class="collection-item-name">Nike Wedge</h3>
+          <h3 class="collection-item-price">£45</h3>
           <a href="" class="collection-view-btn">view</a>
         </div>
         <div class="collection-item">
@@ -996,8 +996,8 @@
             alt=""
             class="collection-img"
           />
-          <h3 class="collection-item-name"></h3>
-          <h3 class="collection-item-price"></h3>
+          <h3 class="collection-item-name">Dunlope Platform</h3>
+          <h3 class="collection-item-price">£25</h3>
           <a href="" class="collection-view-btn">view</a>
         </div>
         <div class="collection-item">
@@ -1006,8 +1006,8 @@
             alt=""
             class="collection-img"
           />
-          <h3 class="collection-item-name"></h3>
-          <h3 class="collection-item-price"></h3>
+          <h3 class="collection-item-name">Nike Airmax Thea</h3>
+          <h3 class="collection-item-price">£70</h3>
           <a href="" class="collection-view-btn">view</a>
         </div>
         <div class="collection-item">
@@ -1016,8 +1016,8 @@
             alt=""
             class="collection-img"
           />
-          <h3 class="collection-item-name"></h3>
-          <h3 class="collection-item-price"></h3>
+          <h3 class="collection-item-name">Rebok Hightop</h3>
+          <h3 class="collection-item-price">£40</h3>
           <a href="" class="collection-view-btn">view</a>
         </div>
         <div class="collection-item">
@@ -1026,8 +1026,8 @@
             alt=""
             class="collection-img"
           />
-          <h3 class="collection-item-name"></h3>
-          <h3 class="collection-item-price"></h3>
+          <h3 class="collection-item-name">Adidas zx-flux</h3>
+          <h3 class="collection-item-price">£45</h3>
           <a href="" class="collection-view-btn">view</a>
         </div>
         <div class="collection-item">
@@ -1036,8 +1036,8 @@
             alt=""
             class="collection-img"
           />
-          <h3 class="collection-item-name"></h3>
-          <h3 class="collection-item-price"></h3>
+          <h3 class="collection-item-name">Jordan retro 1</h3>
+          <h3 class="collection-item-price">£60</h3>
           <a href="" class="collection-view-btn">view</a>
         </div>
         <div class="collection-item">
@@ -1046,8 +1046,8 @@
             alt=""
             class="collection-img"
           />
-          <h3 class="collection-item-name"></h3>
-          <h3 class="collection-item-price"></h3>
+          <h3 class="collection-item-name">Adidas Continental</h3>
+          <h3 class="collection-item-price">£40</h3>
           <a href="" class="collection-view-btn">view</a>
         </div>
         <div class="collection-item">
@@ -1056,8 +1056,8 @@
             alt=""
             class="collection-img"
           />
-          <h3 class="collection-item-name"></h3>
-          <h3 class="collection-item-price"></h3>
+          <h3 class="collection-item-name">Nike Wedge</h3>
+          <h3 class="collection-item-price">£45</h3>
           <a href="" class="collection-view-btn">view</a>
         </div>
         <div class="collection-item">
@@ -1066,8 +1066,8 @@
             alt=""
             class="collection-img"
           />
-          <h3 class="collection-item-name"></h3>
-          <h3 class="collection-item-price"></h3>
+          <h3 class="collection-item-name">Nike Cortez</h3>
+          <h3 class="collection-item-price">£40</h3>
           <a href="" class="collection-view-btn">view</a>
         </div>
         <div class="collection-item">
@@ -1076,8 +1076,8 @@
             alt=""
             class="collection-img"
           />
-          <h3 class="collection-item-name"></h3>
-          <h3 class="collection-item-price"></h3>
+          <h3 class="collection-item-name">Adidas LA trainers</h3>
+          <h3 class="collection-item-price">£45</h3>
           <a href="" class="collection-view-btn">view</a>
         </div>
         <div class="collection-item">
@@ -1086,8 +1086,8 @@
             alt=""
             class="collection-img"
           />
-          <h3 class="collection-item-name"></h3>
-          <h3 class="collection-item-price"></h3>
+          <h3 class="collection-item-name">Adidas zx-flux</h3>
+          <h3 class="collection-item-price">£50</h3>
           <a href="" class="collection-view-btn">view</a>
         </div>
         <div class="collection-item">
@@ -1096,8 +1096,8 @@
             alt=""
             class="collection-img"
           />
-          <h3 class="collection-item-name"></h3>
-          <h3 class="collection-item-price"></h3>
+          <h3 class="collection-item-name">Nike Huarache</h3>
+          <h3 class="collection-item-price">£75</h3>
           <a href="" class="collection-view-btn">view</a>
         </div>
       </div>
