linked my shop page

--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
           </li>
 
           <li class="nav-icon shopIcon">
-            <a href="#"><i class="material-icons">local_mall</i></a>
+            <a href="shop.html"><i class="material-icons">local_mall</i></a>
           </li>
         </ul>
       </nav>
