--- a/index.html
+++ b/index.html
@@ -741,7 +741,7 @@
           </div>
         </div>
 
-        <a href="#" class="shop-btn-men">Find Your Sole</a>
+        <a href="shop.html" class="shop-btn-men">Find Your Sole</a>
       </div>
 
       <!---***************************
@@ -821,11 +821,11 @@
               class="women-product-img"
             />
 
-            <a href="" class="shop-women-product-now-btn">Shop now</a>
+            <a href="#" class="shop-women-product-now-btn">Shop now</a>
           </div>
         </div>
 
-        <a href="#" class="shop-btn-women">Find Your Sole</a>
+        <a href="shop.html" class="shop-btn-women">Find Your Sole</a>
       </div>
 
       <!--***********************
