--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
+
+    <script src="app.js" defer></script>
   </head>
   <body>
     <!-------------------------------------
@@ -884,7 +886,5 @@
         alt="silver hand uk logo"
       />
     </footer>
-
-    <script src="app.js"></script>
   </body>
 </html>
