--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
-
+    <script src="searchbar.js" defer></script>
     <script src="app.js" defer></script>
   </head>
   <body>
@@ -77,7 +77,7 @@
 
             <input
               id="userInput"
-              class="userInput"
+              class="user-input"
               placeholder="Search products..."
               type="text"
             />
@@ -92,7 +92,11 @@
               <div class="men-results">
                 <h2 class="result-section-title">Men</h2>
 
-                <div class="result nike men">
+                <div
+                  data-brand="nike"
+                  data-name="airmax720"
+                  class="result nike men"
+                >
                   <img
                     src="Images/MaleTrainers/maleTrainer1.jpg"
                     alt=""
@@ -107,7 +111,11 @@
                   </div>
                 </div>
 
-                <div class="result nike men">
+                <div
+                  data-brand="nike"
+                  data-name="airforce1"
+                  class="result nike men"
+                >
                   <img
                     src="Images/MaleTrainers/maleTrainer2.jpg"
                     alt=""
@@ -122,7 +130,11 @@
                   </div>
                 </div>
 
-                <div class="result nike men">
+                <div
+                  data-brand="nike"
+                  data-name="airforce1"
+                  class="result nike men"
+                >
                   <img
                     src="Images/MaleTrainers/maleTrainer3.jpg"
                     alt=""
@@ -137,7 +149,11 @@
                   </div>
                 </div>
 
-                <div class="result nike men">
+                <div
+                  data-brand="nike"
+                  data-name="airforce1"
+                  class="result nike men"
+                >
                   <img
                     src="Images/MaleTrainers/maleTrainer4.jpg"
                     alt=""
@@ -152,7 +168,11 @@
                   </div>
                 </div>
 
-                <div class="result adidas men">
+                <div
+                  data-brand="adidas"
+                  data-name="tubular"
+                  class="result adidas men"
+                >
                   <img
                     src="Images/MaleTrainers/maleTrainer5.jpg"
                     alt=""
@@ -167,7 +187,11 @@
                   </div>
                 </div>
 
-                <div class="result nike men">
+                <div
+                  data-brand="nike"
+                  data-name="airforce1"
+                  class="result nike men"
+                >
                   <img
                     src="Images/MaleTrainers/maleTrainer6.jpg"
                     alt=""
@@ -182,7 +206,11 @@
                   </div>
                 </div>
 
-                <div class="result nike men">
+                <div
+                  data-brand="nike"
+                  data-name="airforce1"
+                  class="result nike men"
+                >
                   <img
                     src="Images/MaleTrainers/maleTrainer7.jpg"
                     alt=""
@@ -197,7 +225,11 @@
                   </div>
                 </div>
 
-                <div class="result nike men">
+                <div
+                  data-brand="nike"
+                  data-name="airmax95"
+                  class="result nike men"
+                >
                   <img
                     src="Images/MaleTrainers/maleTrainer8.jpg"
                     alt=""
@@ -212,7 +244,11 @@
                   </div>
                 </div>
 
-                <div class="result nike men">
+                <div
+                  data-brand="nike"
+                  data-name="tiempo"
+                  class="result nike men"
+                >
                   <img
                     src="Images/MaleTrainers/maleTrainer9.jpg"
                     alt=""
@@ -227,7 +263,11 @@
                   </div>
                 </div>
 
-                <div class="result jordan men">
+                <div
+                  data-brand="jordan"
+                  data-name="retro8"
+                  class="result jordan men"
+                >
                   <img
                     src="Images/MaleTrainers/maleTrainer10.jpg"
                     alt=""
@@ -242,7 +282,11 @@
                   </div>
                 </div>
 
-                <div class="result nike men">
+                <div
+                  data-brand="nike"
+                  data-name="airforce1"
+                  class="result nike men"
+                >
                   <img
                     src="Images/MaleTrainers/maleTrainer11.jpg"
                     alt=""
@@ -257,7 +301,11 @@
                   </div>
                 </div>
 
-                <div class="result nike men">
+                <div
+                  data-brand="nike"
+                  data-name="airforce1"
+                  class="result nike men"
+                >
                   <img
                     src="Images/MaleTrainers/maleTrainer12.jpg"
                     alt=""
@@ -272,7 +320,11 @@
                   </div>
                 </div>
 
-                <div class="result adidas men">
+                <div
+                  data-brand="adidas"
+                  data-name="campus"
+                  class="result adidas men"
+                >
                   <img
                     src="Images/MaleTrainers/maleTrainer13.jpg"
                     alt=""
@@ -287,7 +339,11 @@
                   </div>
                 </div>
 
-                <div class="result adidas men">
+                <div
+                  data-brand="adidas"
+                  data-name="classics"
+                  class="result adidas men"
+                >
                   <img
                     src="Images/MaleTrainers/maleTrainer14.jpg"
                     alt=""
@@ -302,7 +358,11 @@
                   </div>
                 </div>
 
-                <div class="result nike men">
+                <div
+                  data-brand="nike"
+                  data-name="airmax97"
+                  class="result nike men"
+                >
                   <img
                     src="Images/MaleTrainers/maleTrainer15.jpg"
                     alt=""
@@ -317,7 +377,11 @@
                   </div>
                 </div>
 
-                <div class="result jordan men">
+                <div
+                  data-brand="jordan"
+                  data-name="flight32"
+                  class="result jordan men"
+                >
                   <img
                     src="Images/MaleTrainers/maleTrainer16.jpg"
                     alt=""
@@ -332,7 +396,11 @@
                   </div>
                 </div>
 
-                <div class="result nike men">
+                <div
+                  data-brand="nike"
+                  data-name="tiempo"
+                  class="result nike men"
+                >
                   <img
                     src="Images/MaleTrainers/maleTrainer17.jpg"
                     alt=""
@@ -347,7 +415,11 @@
                   </div>
                 </div>
 
-                <div class="result jordan men">
+                <div
+                  data-brand="jordan"
+                  data-name="retro1"
+                  class="result jordan men"
+                >
                   <img
                     src="Images/MaleTrainers/maleTrainer18.jpg"
                     alt=""
@@ -362,7 +434,11 @@
                   </div>
                 </div>
 
-                <div class="result nike men">
+                <div
+                  data-brand="nike"
+                  data-name="airforce1"
+                  class="result nike men"
+                >
                   <img
                     src="Images/MaleTrainers/maleTrainer19.jpg"
                     alt=""
@@ -377,7 +453,11 @@
                   </div>
                 </div>
 
-                <div class="result nike men">
+                <div
+                  data-brand="nike"
+                  data-name="runners"
+                  class="result nike men"
+                >
                   <img
                     src="Images/MaleTrainers/maleTrainer20.jpg"
                     alt=""
@@ -392,7 +472,11 @@
                   </div>
                 </div>
 
-                <div class="result jordan men">
+                <div
+                  data-brand="jordan"
+                  data-name="retro4"
+                  class="result jordan men"
+                >
                   <img
                     src="Images/MaleTrainers/maleTrainer21.jpg"
                     alt=""
@@ -414,7 +498,11 @@
               <div class="women-results">
                 <h2 class="result-section-title">Women</h2>
 
-                <div class="result nike women">
+                <div
+                  data-brand="nike"
+                  data-name="wedge"
+                  class="result nike women"
+                >
                   <img
                     src="Images/FemaleTrainers/femaleTrainer1.jpg"
                     alt=""
@@ -429,7 +517,11 @@
                   </div>
                 </div>
 
-                <div class="result puma women">
+                <div
+                  data-brand="puma"
+                  data-name="suede"
+                  class="result puma women"
+                >
                   <img
                     src="Images/FemaleTrainers/femaleTrainer2.jpg"
                     alt=""
@@ -444,7 +536,11 @@
                   </div>
                 </div>
 
-                <div class="result nike women">
+                <div
+                  data-brand="nike"
+                  data-name="cortez"
+                  class="result nike women"
+                >
                   <img
                     src="Images/FemaleTrainers/femaleTrainer3.jpg"
                     alt=""
@@ -459,7 +555,11 @@
                   </div>
                 </div>
 
-                <div class="result nike women">
+                <div
+                  data-brand="nike"
+                  data-name="wedge"
+                  class="result nike women"
+                >
                   <img
                     src="Images/FemaleTrainers/femaleTrainer4.jpg"
                     alt=""
@@ -474,7 +574,11 @@
                   </div>
                 </div>
 
-                <div class="result dunlope women">
+                <div
+                  data-brand="dunlope"
+                  data-name="platform"
+                  class="result dunlope women"
+                >
                   <img
                     src="Images/FemaleTrainers/femaleTrainer5.jpg"
                     alt=""
@@ -489,7 +593,11 @@
                   </div>
                 </div>
 
-                <div class="result nike women">
+                <div
+                  data-brand="nike"
+                  data-name="airmaxthea"
+                  class="result nike women"
+                >
                   <img
                     src="Images/FemaleTrainers/femaleTrainer6.jpg"
                     alt=""
@@ -497,14 +605,18 @@
                   />
 
                   <div class="trainer-details">
-                    <h4 class="result-title">Nike Thea</h4>
+                    <h4 class="result-title">Nike Airmax Thea</h4>
                     <h4 class="trainer-size">Size: 5.5 uk</h4>
                     <h4 class="result-price">£70</h4>
                     <a href="#" class="view-btn">view</a>
                   </div>
                 </div>
 
-                <div class="result rebok women">
+                <div
+                  data-brand="rebok"
+                  data-name="mid"
+                  class="result rebok women"
+                >
                   <img
                     src="Images/FemaleTrainers/femaleTrainer7.jpg"
                     alt=""
@@ -519,7 +631,11 @@
                   </div>
                 </div>
 
-                <div class="result adidas women">
+                <div
+                  data-brand="adidas"
+                  data-name="zxflux"
+                  class="result adidas women"
+                >
                   <img
                     src="Images/FemaleTrainers/femaleTrainer8.jpg"
                     alt=""
@@ -534,7 +650,11 @@
                   </div>
                 </div>
 
-                <div class="result nike women">
+                <div
+                  data-brand="nike"
+                  data-name="mid"
+                  class="result nike women"
+                >
                   <img
                     src="Images/FemaleTrainers/femaleTrainer9.jpg"
                     alt=""
@@ -549,7 +669,11 @@
                   </div>
                 </div>
 
-                <div class="result nike women">
+                <div
+                  data-brand="adidas"
+                  data-name="continental"
+                  class="result nike women"
+                >
                   <img
                     src="Images/FemaleTrainers/femaleTrainer10.jpg"
                     alt=""
@@ -564,7 +688,11 @@
                   </div>
                 </div>
 
-                <div class="result nike women">
+                <div
+                  data-brand="nike"
+                  data-name="wedge"
+                  class="result nike women"
+                >
                   <img
                     src="Images/FemaleTrainers/femaleTrainer11.jpg"
                     alt=""
@@ -579,7 +707,11 @@
                   </div>
                 </div>
 
-                <div class="result nike women">
+                <div
+                  data-brand="nike"
+                  data-name="cortez"
+                  class="result nike women"
+                >
                   <img
                     src="Images/FemaleTrainers/femaleTrainer12.jpg"
                     alt=""
@@ -594,7 +726,11 @@
                   </div>
                 </div>
 
-                <div class="result adidas women">
+                <div
+                  data-brand="adidas"
+                  data-name="latrainer"
+                  class="result adidas women"
+                >
                   <img
                     src="Images/FemaleTrainers/femaleTrainer13.jpg"
                     alt=""
@@ -609,7 +745,12 @@
                   </div>
                 </div>
 
-                <div class="result adidas women">
+                <div
+                  data-brand=""
+                  adidas
+                  data-name="zxflux"
+                  class="result adidas women"
+                >
                   <img
                     src="Images/FemaleTrainers/femaleTrainer14.jpg"
                     alt=""
@@ -624,7 +765,11 @@
                   </div>
                 </div>
 
-                <div class="result nike women">
+                <div
+                  data-brand="nike"
+                  data-name="huarache"
+                  class="result nike women"
+                >
                   <img
                     src="Images/FemaleTrainers/femaleTrainer15.jpg"
                     alt=""
