search bar changes

--- a/index.html
+++ b/index.html
@@ -92,11 +92,7 @@
               <div class="men-results">
                 <h2 class="result-section-title">Men</h2>
 
-                <div
-                  data-brand="nike"
-                  data-name="airmax720"
-                  class="result nike men"
-                >
+                <div data-brand="nike" data-name="airmax720" class="result">
                   <img
                     src="Images/MaleTrainers/maleTrainer1.jpg"
                     alt=""
@@ -111,11 +107,7 @@
                   </div>
                 </div>
 
-                <div
-                  data-brand="nike"
-                  data-name="airforce1"
-                  class="result nike men"
-                >
+                <div data-brand="nike" data-name="airforce1" class="result">
                   <img
                     src="Images/MaleTrainers/maleTrainer2.jpg"
                     alt=""
@@ -130,11 +122,7 @@
                   </div>
                 </div>
 
-                <div
-                  data-brand="nike"
-                  data-name="airforce1"
-                  class="result nike men"
-                >
+                <div data-brand="nike" data-name="airforce1" class="result">
                   <img
                     src="Images/MaleTrainers/maleTrainer3.jpg"
                     alt=""
@@ -149,11 +137,7 @@
                   </div>
                 </div>
 
-                <div
-                  data-brand="nike"
-                  data-name="airforce1"
-                  class="result nike men"
-                >
+                <div data-brand="nike" data-name="airforce1" class="result">
                   <img
                     src="Images/MaleTrainers/maleTrainer4.jpg"
                     alt=""
@@ -168,11 +152,7 @@
                   </div>
                 </div>
 
-                <div
-                  data-brand="adidas"
-                  data-name="tubular"
-                  class="result adidas men"
-                >
+                <div data-brand="adidas" data-name="tubular" class="result">
                   <img
                     src="Images/MaleTrainers/maleTrainer5.jpg"
                     alt=""
@@ -187,11 +167,7 @@
                   </div>
                 </div>
 
-                <div
-                  data-brand="nike"
-                  data-name="airforce1"
-                  class="result nike men"
-                >
+                <div data-brand="nike" data-name="airforce1" class="result">
                   <img
                     src="Images/MaleTrainers/maleTrainer6.jpg"
                     alt=""
@@ -206,11 +182,7 @@
                   </div>
                 </div>
 
-                <div
-                  data-brand="nike"
-                  data-name="airforce1"
-                  class="result nike men"
-                >
+                <div data-brand="nike" data-name="airforce1" class="result">
                   <img
                     src="Images/MaleTrainers/maleTrainer7.jpg"
                     alt=""
@@ -225,11 +197,7 @@
                   </div>
                 </div>
 
-                <div
-                  data-brand="nike"
-                  data-name="airmax95"
-                  class="result nike men"
-                >
+                <div data-brand="nike" data-name="airmax95" class="result">
                   <img
                     src="Images/MaleTrainers/maleTrainer8.jpg"
                     alt=""
@@ -244,11 +212,7 @@
                   </div>
                 </div>
 
-                <div
-                  data-brand="nike"
-                  data-name="tiempo"
-                  class="result nike men"
-                >
+                <div data-brand="nike" data-name="tiempo" class="result">
                   <img
                     src="Images/MaleTrainers/maleTrainer9.jpg"
                     alt=""
@@ -263,11 +227,7 @@
                   </div>
                 </div>
 
-                <div
-                  data-brand="jordan"
-                  data-name="retro8"
-                  class="result jordan men"
-                >
+                <div data-brand="jordan" data-name="retro8" class="result">
                   <img
                     src="Images/MaleTrainers/maleTrainer10.jpg"
                     alt=""
@@ -282,11 +242,7 @@
                   </div>
                 </div>
 
-                <div
-                  data-brand="nike"
-                  data-name="airforce1"
-                  class="result nike men"
-                >
+                <div data-brand="nike" data-name="airforce1" class="result">
                   <img
                     src="Images/MaleTrainers/maleTrainer11.jpg"
                     alt=""
@@ -301,11 +257,7 @@
                   </div>
                 </div>
 
-                <div
-                  data-brand="nike"
-                  data-name="airforce1"
-                  class="result nike men"
-                >
+                <div data-brand="nike" data-name="airforce1" class="result">
                   <img
                     src="Images/MaleTrainers/maleTrainer12.jpg"
                     alt=""
@@ -320,11 +272,7 @@
                   </div>
                 </div>
 
-                <div
-                  data-brand="adidas"
-                  data-name="campus"
-                  class="result adidas men"
-                >
+                <div data-brand="adidas" data-name="campus" class="result">
                   <img
                     src="Images/MaleTrainers/maleTrainer13.jpg"
                     alt=""
@@ -339,11 +287,7 @@
                   </div>
                 </div>
 
-                <div
-                  data-brand="adidas"
-                  data-name="classics"
-                  class="result adidas men"
-                >
+                <div data-brand="adidas" data-name="classics" class="result">
                   <img
                     src="Images/MaleTrainers/maleTrainer14.jpg"
                     alt=""
@@ -358,11 +302,7 @@
                   </div>
                 </div>
 
-                <div
-                  data-brand="nike"
-                  data-name="airmax97"
-                  class="result nike men"
-                >
+                <div data-brand="nike" data-name="airmax97" class="result">
                   <img
                     src="Images/MaleTrainers/maleTrainer15.jpg"
                     alt=""
@@ -377,11 +317,7 @@
                   </div>
                 </div>
 
-                <div
-                  data-brand="jordan"
-                  data-name="flight32"
-                  class="result jordan men"
-                >
+                <div data-brand="jordan" data-name="flight32" class="result">
                   <img
                     src="Images/MaleTrainers/maleTrainer16.jpg"
                     alt=""
@@ -396,11 +332,7 @@
                   </div>
                 </div>
 
-                <div
-                  data-brand="nike"
-                  data-name="tiempo"
-                  class="result nike men"
-                >
+                <div data-brand="nike" data-name="tiempo" class="result">
                   <img
                     src="Images/MaleTrainers/maleTrainer17.jpg"
                     alt=""
@@ -415,11 +347,7 @@
                   </div>
                 </div>
 
-                <div
-                  data-brand="jordan"
-                  data-name="retro1"
-                  class="result jordan men"
-                >
+                <div data-brand="jordan" data-name="retro1" class="result">
                   <img
                     src="Images/MaleTrainers/maleTrainer18.jpg"
                     alt=""
@@ -434,11 +362,7 @@
                   </div>
                 </div>
 
-                <div
-                  data-brand="nike"
-                  data-name="airforce1"
-                  class="result nike men"
-                >
+                <div data-brand="nike" data-name="airforce1" class="result">
                   <img
                     src="Images/MaleTrainers/maleTrainer19.jpg"
                     alt=""
@@ -453,11 +377,7 @@
                   </div>
                 </div>
 
-                <div
-                  data-brand="nike"
-                  data-name="runners"
-                  class="result nike men"
-                >
+                <div data-brand="nike" data-name="runners" class="result">
                   <img
                     src="Images/MaleTrainers/maleTrainer20.jpg"
                     alt=""
@@ -472,11 +392,7 @@
                   </div>
                 </div>
 
-                <div
-                  data-brand="jordan"
-                  data-name="retro4"
-                  class="result jordan men"
-                >
+                <div data-brand="jordan" data-name="retro4" class="result">
                   <img
                     src="Images/MaleTrainers/maleTrainer21.jpg"
                     alt=""
@@ -498,11 +414,7 @@
               <div class="women-results">
                 <h2 class="result-section-title">Women</h2>
 
-                <div
-                  data-brand="nike"
-                  data-name="wedge"
-                  class="result nike women"
-                >
+                <div data-brand="nike" data-name="wedge" class="result">
                   <img
                     src="Images/FemaleTrainers/femaleTrainer1.jpg"
                     alt=""
@@ -517,11 +429,7 @@
                   </div>
                 </div>
 
-                <div
-                  data-brand="puma"
-                  data-name="suede"
-                  class="result puma women"
-                >
+                <div data-brand="puma" data-name="suede" class="result">
                   <img
                     src="Images/FemaleTrainers/femaleTrainer2.jpg"
                     alt=""
@@ -536,11 +444,7 @@
                   </div>
                 </div>
 
-                <div
-                  data-brand="nike"
-                  data-name="cortez"
-                  class="result nike women"
-                >
+                <div data-brand="nike" data-name="cortez" class="result">
                   <img
                     src="Images/FemaleTrainers/femaleTrainer3.jpg"
                     alt=""
@@ -555,11 +459,7 @@
                   </div>
                 </div>
 
-                <div
-                  data-brand="nike"
-                  data-name="wedge"
-                  class="result nike women"
-                >
+                <div data-brand="nike" data-name="wedge" class="result">
                   <img
                     src="Images/FemaleTrainers/femaleTrainer4.jpg"
                     alt=""
@@ -574,11 +474,7 @@
                   </div>
                 </div>
 
-                <div
-                  data-brand="dunlope"
-                  data-name="platform"
-                  class="result dunlope women"
-                >
+                <div data-brand="dunlope" data-name="platform" class="result">
                   <img
                     src="Images/FemaleTrainers/femaleTrainer5.jpg"
                     alt=""
@@ -593,11 +489,7 @@
                   </div>
                 </div>
 
-                <div
-                  data-brand="nike"
-                  data-name="airmaxthea"
-                  class="result nike women"
-                >
+                <div data-brand="nike" data-name="airmaxthea" class="result">
                   <img
                     src="Images/FemaleTrainers/femaleTrainer6.jpg"
                     alt=""
@@ -612,11 +504,7 @@
                   </div>
                 </div>
 
-                <div
-                  data-brand="rebok"
-                  data-name="mid"
-                  class="result rebok women"
-                >
+                <div data-brand="rebok" data-name="mid" class="result">
                   <img
                     src="Images/FemaleTrainers/femaleTrainer7.jpg"
                     alt=""
@@ -631,11 +519,7 @@
                   </div>
                 </div>
 
-                <div
-                  data-brand="adidas"
-                  data-name="zxflux"
-                  class="result adidas women"
-                >
+                <div data-brand="adidas" data-name="zxflux" class="result">
                   <img
                     src="Images/FemaleTrainers/femaleTrainer8.jpg"
                     alt=""
@@ -650,11 +534,7 @@
                   </div>
                 </div>
 
-                <div
-                  data-brand="nike"
-                  data-name="mid"
-                  class="result nike women"
-                >
+                <div data-brand="nike" data-name="mid" class="result">
                   <img
                     src="Images/FemaleTrainers/femaleTrainer9.jpg"
                     alt=""
@@ -669,11 +549,7 @@
                   </div>
                 </div>
 
-                <div
-                  data-brand="adidas"
-                  data-name="continental"
-                  class="result nike women"
-                >
+                <div data-brand="adidas" data-name="continental" class="result">
                   <img
                     src="Images/FemaleTrainers/femaleTrainer10.jpg"
                     alt=""
@@ -688,11 +564,7 @@
                   </div>
                 </div>
 
-                <div
-                  data-brand="nike"
-                  data-name="wedge"
-                  class="result nike women"
-                >
+                <div data-brand="nike" data-name="wedge" class="result">
                   <img
                     src="Images/FemaleTrainers/femaleTrainer11.jpg"
                     alt=""
@@ -707,11 +579,7 @@
                   </div>
                 </div>
 
-                <div
-                  data-brand="nike"
-                  data-name="cortez"
-                  class="result nike women"
-                >
+                <div data-brand="nike" data-name="cortez" class="result">
                   <img
                     src="Images/FemaleTrainers/femaleTrainer12.jpg"
                     alt=""
@@ -726,11 +594,7 @@
                   </div>
                 </div>
 
-                <div
-                  data-brand="adidas"
-                  data-name="latrainer"
-                  class="result adidas women"
-                >
+                <div data-brand="adidas" data-name="latrainer" class="result">
                   <img
                     src="Images/FemaleTrainers/femaleTrainer13.jpg"
                     alt=""
@@ -745,12 +609,7 @@
                   </div>
                 </div>
 
-                <div
-                  data-brand=""
-                  adidas
-                  data-name="zxflux"
-                  class="result adidas women"
-                >
+                <div data-brand="" adidas data-name="zxflux" class="result">
                   <img
                     src="Images/FemaleTrainers/femaleTrainer14.jpg"
                     alt=""
@@ -765,11 +624,7 @@
                   </div>
                 </div>
 
-                <div
-                  data-brand="nike"
-                  data-name="huarache"
-                  class="result nike women"
-                >
+                <div data-brand="nike" data-name="huarache" class="result">
                   <img
                     src="Images/FemaleTrainers/femaleTrainer15.jpg"
                     alt=""
